--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>VueJS Tutorial</title>
-    <script src="vue.js"></script>
-    <link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="images/ironman.png" type="image/x-icon" />
+	<link rel="stylesheet" href="styles.css" />
+	<script src="vue.js"></script>	
 </head>
 <body>
 	<div id="app" class="game-space">
@@ -11,18 +12,27 @@
 		<div class="game-title">{{ gameTitle }}</div>
 
 		<div class="characters">
-			<div class="character-col" v-for="character in characters">
-				<div class="img-wrapper" :style="{backgroundImage: 'url(' + character.avatarUrl + ')'}"></div>
+			<div class="character-col" v-for="item in player">
+				<div class="img-wrapper" :style="{backgroundImage: 'url(' + item.avatarUrl + ')'}"></div>
 				<div class="character-heal">
-					<div class="character-heal-chart" :style="{width: playerHeal + '%'}">
-						<span class="character-heal-figure">{{ character.heal }}</span>
+					<div class="character-heal-chart" :style="{width: item.heal + '%'}">
+						<span class="character-heal-figure">{{ item.heal }}</span>
 					</div>
 				</div>
-				<div class="character-name">{{ character.name }}</div>
+				<div class="character-name">{{ item.name }}</div>
+			</div>
+			<div class="character-col" v-for="item in enemy">
+				<div class="img-wrapper" :style="{backgroundImage: 'url(' + item.avatarUrl + ')'}"></div>
+				<div class="character-heal">
+					<div class="character-heal-chart" :style="{width: item.heal + '%'}">
+						<span class="character-heal-figure">{{ item.heal }}</span>
+					</div>
+				</div>
+				<div class="character-name">{{ item.name }}</div>
 			</div>
 		</div>
 
-		<button class="btn-start">Strat a new game</button>
+		<button class="btn-start" @click="attack()">Start a new game</button>
 
 		<ul class="btn-control-block">
 			<li class="btn-control btn-attack">Attack</li>
